--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "email-templates": "^11.0.3",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
     "http": "^0.0.1-security",
+    "nodemailer": "^6.9.1",
+    "pug": "^3.0.2",
     "require": "^2.4.20"
   },
   "devDependencies": {
